--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
 <div>
   <h1>Welcome to {{ title }}!</h1>
+
+  @for (item of tareas; track item) {
+    <button (click)="deleteTask(item)">eliminar</button>
+  }
+  
 </div>
+@for (item of tareas; track item) {
+  <li>{{ item }}</li>
+  } 
+
+
+<input type="text" #taskInput>
+<button (click)="addTask(taskInput.value)">agregar</button>
+<br>
+<input type="text">
+<button>actualizar</button>
+
